objects/Asset.object
<CustomObject>
    <fields>
        <fullName>AssetCategory__c</fullName>
        <formula>IF( CONTAINS( Name , &apos;Sport&apos;) , &apos;Sport Offer&apos;, IF(CONTAINS( Name , &apos;Mobile Plan&apos;), &apos;Mobile Offer&apos;, IF( CONTAINS(Name, &apos;Fibre Internet&apos;), &apos;Fibre Internet Offer&apos;, &apos;Unknown&apos; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Root__c</fullName>
        <formula>IF(AND(vlocity_cmt__ParentItemId__c = &apos;&apos;, ISPICKVAL(Product2.Family, &apos;Mobile&apos;), ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Offer&apos;)), &apos;true&apos;, &apos;false&apos;)</formula>
        <label>Is Root</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Image__c</fullName>
        <formula>IF(ISBLANK(Product_Image__c), 
IF(ISPICKVAL(Product2.Family, &apos;Bundle&apos;),&apos;/resource/VDOProductResources/images/TNBundle.png&apos;,&apos;&apos;)+ 
IF(ISPICKVAL(Product2.Family, &apos;Mobile&apos;),
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Watch&apos;), &apos;/resource/VDOProductResources/images/TNWearable.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Earphones&apos;), &apos;/resource/VDOProductResources/images/TNHeadphones.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Tariff&apos;), &apos;/resource/VDOProductResources/images/TNTariff.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Grant&apos;), &apos;/resource/VDOProductResources/images/TNTariff.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Extra&apos;), &apos;/resource/VDOProductResources/images/TNStar.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Service&apos;), &apos;/resource/VDOProductResources/images/TNStar.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Discount&apos;), &apos;/resource/VDOProductResources/images/TNDiscount.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Offer&apos;), &apos;/resource/VDOProductResources/images/TNStar.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Technology&apos;), &apos;/resource/VDOProductResources/images/TNSim.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__Type__c, &apos;Bundle&apos;), &apos;/resource/VDOProductResources/images/TNBundle.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Handset&apos;), &apos;/resource/VDOProductResources/images/TNMobile.png&apos;,&apos;&apos;),
&apos;&apos;)+
IF(ISPICKVAL(Product2.Family, &apos;Landline&apos;),
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Extra&apos;), &apos;/resource/VDOProductResources/images/TNPhone.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Service&apos;), &apos;/resource/VDOProductResources/images/TNPBX.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Offer&apos;), &apos;/resource/VDOProductResources/images/TNPhone.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Installation&apos;), &apos;/resource/VDOProductResources/images/TNInstall.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Software&apos;), &apos;/resource/VDOProductResources/images/TNPBX.png&apos;,&apos;&apos;),
&apos;&apos;)+
IF(ISPICKVAL(Product2.Family, &apos;Internet&apos;),
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Product&apos;), &apos;/resource/VDOProductResources/images/TNInternet.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Service&apos;), &apos;/resource/VDOProductResources/images/TNLAN.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Technology&apos;), &apos;/resource/VDOProductResources/images/TNPBX.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Installation&apos;), &apos;/resource/VDOProductResources/images/TNInstall.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Software&apos;), &apos;/resource/VDOProductResources/images/TNInternet.png&apos;,&apos;&apos;), 
&apos;&apos;)+
IF(ISPICKVAL(Product2.Family, &apos;Support&apos;),&apos;/resource/VDOProductResources/images/TNSupport.png&apos;,&apos;&apos;)+ 
IF(ISPICKVAL(Product2.Family, &apos;Discount&apos;),&apos;/resource/VDOProductResources/images/TNDiscount.png&apos;,&apos;&apos;)+ 
IF(ISPICKVAL(Product2.Family, &apos;TV&apos;),
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Extra&apos;), &apos;/resource/VDOProductResources/images/TNTV.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Service&apos;), &apos;/resource/VDOProductResources/images/TNTV.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Package&apos;), &apos;/resource/VDOProductResources/images/TNTV.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__SubType__c, &apos;Technology&apos;), &apos;/resource/VDOProductResources/images/TNTV.png&apos;,&apos;&apos;)+ 
          IF(ISPICKVAL(Product2.vlocity_cmt__Type__c, &apos;Bundle&apos;), &apos;/resource/VDOProductResources/images/TNBundle.png&apos;,&apos;&apos;),
&apos;&apos;),
Product_Image__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broadband - ADSL</fullName>
                </value>
                <value>
                    <fullName>Broadband - Fibre</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Landline</fullName>
                </value>
                <value>
                    <fullName>Mobile - Contract</fullName>
                </value>
                <value>
                    <fullName>Mobile - Pay As You Go</fullName>
                </value>
                <value>
                    <fullName>Service - Cloud Solutions</fullName>
                </value>
                <value>
                    <fullName>Service - Internet</fullName>
                </value>
                <value>
                    <fullName>Service - Internet Security</fullName>
                </value>
                <value>
                    <fullName>Service - Managed Network</fullName>
                </value>
                <value>
                    <fullName>TV - Equipment</fullName>
                </value>
                <value>
                    <fullName>TV - Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vlocity_Demo_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vlocity Demo Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivationDate__c</fullName>
        <description>The date when this asset was activated.</description>
        <inlineHelpText>Activation Date for this Asset</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivationName__c</fullName>
        <description>Name of the person who activated this asset.</description>
        <label>Activation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetReferenceId__c</fullName>
        <description>Unique identifier of the asset. Used by Vlocity CPQ to track the asset across various objects in the asset-based ordering lifecycle. Populate this field with some globally unique identifier if the asset is created/mastered in an external system. When created initially within Salesforce, Vlocity assigns a value based on the Salesforce ID.</description>
        <label>Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the asset.</description>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Assets</relationshipLabel>
        <relationshipName>BillingAccountAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConnectDate__c</fullName>
        <label>Connect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisconnectDate__c</fullName>
        <label>Disconnect Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveQuantity__c</fullName>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InCartQuantityMap__c</fullName>
        <label>InCartQuantityMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InventoryItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Item</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemName__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>JSON body containing Vlocity Attribute data for the asset.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>Vlocity line number copied from the order which assists in sequencing the assets and organizing them into a hierarchy.</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCalculatedPrice__c</fullName>
        <label>One Time Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCharge__c</fullName>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeDiscountPrice__c</fullName>
        <label>One Time Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeManualDiscount__c</fullName>
        <label>One Time Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Product from which this asset was created or most recently updated.</description>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentItemId__c</fullName>
        <label>ParentItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Assets Using This Price List</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricebookEntryId__c</fullName>
        <description>PricebookEntryId</description>
        <inlineHelpText>PricebookEntryId</inlineHelpText>
        <label>PricebookEntryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingLogData__c</fullName>
        <description>Detailed pricing log information for this asset stored as a JSON structure.</description>
        <label>Pricing Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductAttribXN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use JSONAttribute__c.</description>
        <label>Product Attribute</label>
        <referenceTo>vlocity_cmt__ProductAttribXN__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductHierarchyPath__c</fullName>
        <description>Vlocity internal field which identifies the path for this asset within the product hierarchy.</description>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>The current provisioning, or fulfillment, status of the asset with values such as New, Active, Changed or Deleted.</description>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCalculatedPrice__c</fullName>
        <label>Recurring Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCharge__c</fullName>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringDiscountPrice__c</fullName>
        <label>Recurring Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringManualDiscount__c</fullName>
        <label>Recurring Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringUOM__c</fullName>
        <label>Recurring UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootItemId__c</fullName>
        <label>RootItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Assets</relationshipLabel>
        <relationshipName>ServiceAccountAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Service Point Assets</relationshipLabel>
        <relationshipName>ServicePointAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__Asset_Activation_Date_Rule</fullName>
        <active>true</active>
        <description>Validation Rule for Asset Activation Date. It should not be in the past.</description>
        <errorConditionFormula>OR (vlocity_cmt__ActivationDate__c&lt;TODAY(),vlocity_cmt__ActivationDate__c&gt;(TODAY()+180))</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__ActivationDate__c</errorDisplayField>
        <errorMessage>Activation Date cannot be in the past or more than 180 days in the future.</errorMessage>
    </validationRules>
</CustomObject>